--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <ul>
-    <li> <a href="#">Netflix clone</a> </li>
-    <li> <a href="#"> Temperature-convertor</a> </li>
+    <li> <a href="netflix.html">Netflix clone</a> </li>
+    <li> <a href="temperature-convertor.html"> Temperature-convertor</a> </li>
     <li> <a href="#"> Portfolio</a ></li>
 </body>
