--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <ul>
     <li> <a href="netflix.html">Netflix clone</a> </li>
-    <li> <a href="Temperature-convertEr.html"> Temperature-convertor</a> </li>
+    <li> <a href="Temperature-converter.html"> Temperature-convertor</a> </li>
     <li> <a href="#"> Portfolio</a ></li>
 </body>
