--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
   <ul>
     <li> <a href="netflix.html">Netflix clone</a> </li>
     <li> <a href="Temperature-converter.html"> Temperature-convertor</a> </li>
-    <li> <a href="#"> Portfolio</a ></li>
+    <li> <a href="portfolio/index.html"> Portfolio</a ></li>
 </body>
