--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -11,30 +11,114 @@
 <body>
     <div class="app">
         <div class="header">
-            <h1> About me</h1>
+            <h1>About Me</h1>
         </div>
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="project.html">Project</a></li>
+            <li><a href="project.html">Projects</a></li>
             <li><a href="about.html">About Me</a></li>
         </ul>
         <div class="details">
             <div class="introduction">
-                <h2>Srishti kumari</h2>
+                <h2>Srishti Kumari</h2>
                 <p>
-                    I am pursuing B-tech in computer science from BIT Mesra. I want to be a Full stack web developer.I
-                    also have interests in AI and ML.
+                    I am pursuing B.Tech in Computer Science from BIT Mesra. I am passionate about becoming a Full Stack Web Developer. My interests also span across AI, Machine Learning, and Data Science. I enjoy tackling complex problems and building solutions that have a meaningful impact on users.
                 </p>
             </div>
 
-            <div class="hobbies">
-                <h2>Hobbies</h2>
-                <p>Basketball</p>
-                <p>Gardening</p>
-                <p>Traveling</p>
-                <p>Listening music</p>
+            <div class="career-objective">
+                <h2>Career Objective</h2>
+                <p>
+                    My goal is to leverage my skills in Full Stack Web Development to build scalable and innovative applications. I aim to grow within a dynamic team, contributing to the development of cutting-edge technologies while continuously learning and improving my technical knowledge.
+                </p>
+            </div>
+
+            <div class="education">
+                <h2>Education</h2>
+                <p><strong>BIT Mesra, Patna</strong><br> B.Tech in Computer Science, 2024</p>
+                <p><strong>ABC School</strong><br> Class 12th - Science, 2020</p>
             </div>
         </div>
+
+        <div class="skills">
+            <h2>Skills</h2>
+            <div class="skill-category">
+                <h3>Web Development</h3>
+                <ul>
+                    <li>Full Stack Development (React, Node.js, Express.js, MongoDB)</li>
+                    <li>HTML5, CSS3, JavaScript (ES6+)</li>
+                    <li>Version Control (Git, GitHub)</li>
+                    <li>Responsive Web Design</li>
+                    <li>API Development and Integration</li>
+                </ul>
+            </div>
+
+            <div class="skill-category">
+                <h3>Artificial Intelligence & Machine Learning</h3>
+                <ul>
+                    <li>Python (NumPy, Pandas, Matplotlib)</li>
+                    <li>Machine Learning (Supervised & Unsupervised Learning)</li>
+                    <li>TensorFlow, Keras</li>
+                    <li>Data Preprocessing & Feature Engineering</li>
+                    <li>Model Evaluation & Tuning</li>
+                </ul>
+            </div>
+
+            <div class="skill-category">
+                <h3>Tools & Technologies</h3>
+                <ul>
+                    <li>Docker</li>
+                    <li>Postman</li>
+                    <li>CI/CD Pipeline</li>
+                    <li>MongoDB, MySQL, PostgreSQL</li>
+                    <li>Firebase</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li>
+                    <h3>Interactive V-Log Post Platform</h3>
+                    <p>Built using Node.js and React, this platform allows users to create and browse engaging V-Logs, incorporating features like authentication, notifications, and media management.</p>
+                </li>
+                <li>
+                    <h3>Todo Application</h3>
+                    <p>A task management tool developed with React.js and Firebase for real-time data synchronization. The app includes user authentication, task tracking, and progress visualization.</p>
+                </li>
+                <li>
+                    <h3>Help Desk Platform</h3>
+                    <p>Developed with Spring Boot, React.js, and MongoDB, this platform facilitates real-time chat, notifications, and complaint management for customer support teams.</p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="hobbies">
+            <h2>Hobbies</h2>
+            <p>Basketball</p>
+            <p>Gardening</p>
+            <p>Traveling</p>
+            <p>Listening to Music</p>
+        </div>
+
+        <div class="contact">
+            <h2>Contact</h2>
+            <p><strong>Email:</strong> srishtikumari@example.com</p>
+            <p><strong>Phone:</strong> +91 9876543210</p>
+            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/srishtikumari" target="_blank">LinkedIn Profile</a></p>
+        </div>
+
+        <div class="testimonials">
+            <h2>Testimonials</h2>
+            <div class="testimonial">
+                <p><strong>John Doe, CEO at TechCorp</strong><br> "Srishti is an exceptional developer with a sharp mind and a strong work ethic. Her ability to tackle complex problems and build solutions from scratch is impressive." </p>
+            </div>
+            <div class="testimonial">
+                <p><strong>Jane Smith, Senior Developer at CodeWorks</strong><br> "I had the pleasure of working with Srishti on a project, and she demonstrated excellent teamwork and technical skills. She is always eager to learn and improve." </p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
