--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -22,7 +22,11 @@
             <div class="introduction">
                 <h2>Srishti Kumari</h2>
                 <p>
-                    I am pursuing B.Tech in Computer Science from BIT Mesra. I am passionate about becoming a Full Stack Web Developer. My interests also span across AI, Machine Learning, and Data Science. I enjoy tackling complex problems and building solutions that have a meaningful impact on users.
+                    Final-year Computer Science student specializing in Full Stack Development with extensive hands-on experience in
+                    creating
+                    dynamic web applications and projects. With a strong academic record and active participation in extracurricular
+                    activities,
+                    I am passionate about building advanced, user-centric applications and driving innovative ideas to fruition.
                 </p>
             </div>
 
@@ -36,7 +40,8 @@
             <div class="education">
                 <h2>Education</h2>
                 <p><strong>BIT Mesra, Patna</strong><br> B.Tech in Computer Science, 2024</p>
-                <p><strong>ABC School</strong><br> Class 12th - Science, 2020</p>
+                <p><strong>S.G.D.Patliputra High School, Patna Percentage- 70%</strong><br> Class 12th - 2021</p>
+                <p><strong>M V K B High School, Patna Percentage- 75%</strong><br> Class 10th - 2021</p>
             </div>
         </div>
 
@@ -45,8 +50,8 @@
             <div class="skill-category">
                 <h3>Web Development</h3>
                 <ul>
-                    <li>Full Stack Development (React, Node.js, Express.js, MongoDB)</li>
-                    <li>HTML5, CSS3, JavaScript (ES6+)</li>
+                    <li>Full Stack Development (React, Node.js, Next.js MongoDB)</li>
+                    <li>HTML5, CSS3, JavaScript </li>
                     <li>Version Control (Git, GitHub)</li>
                     <li>Responsive Web Design</li>
                     <li>API Development and Integration</li>
@@ -58,40 +63,50 @@
                 <ul>
                     <li>Python (NumPy, Pandas, Matplotlib)</li>
                     <li>Machine Learning (Supervised & Unsupervised Learning)</li>
-                    <li>TensorFlow, Keras</li>
                     <li>Data Preprocessing & Feature Engineering</li>
-                    <li>Model Evaluation & Tuning</li>
+                    <li>Model Evaluation </li>
                 </ul>
             </div>
 
             <div class="skill-category">
                 <h3>Tools & Technologies</h3>
                 <ul>
-                    <li>Docker</li>
+                    <li>GitHub</li>
                     <li>Postman</li>
-                    <li>CI/CD Pipeline</li>
-                    <li>MongoDB, MySQL, PostgreSQL</li>
+                    <li>REST APIs</li>
+                    <li>MongoDB, MySQL</li>
                     <li>Firebase</li>
+                    <li>Spring Boot</li>
                 </ul>
             </div>
         </div>
 
         <div class="projects">
             <h2>Projects</h2>
-            <ul>
-                <li>
-                    <h3>Interactive V-Log Post Platform</h3>
-                    <p>Built using Node.js and React, this platform allows users to create and browse engaging V-Logs, incorporating features like authentication, notifications, and media management.</p>
-                </li>
-                <li>
-                    <h3>Todo Application</h3>
-                    <p>A task management tool developed with React.js and Firebase for real-time data synchronization. The app includes user authentication, task tracking, and progress visualization.</p>
-                </li>
-                <li>
-                    <h3>Help Desk Platform</h3>
-                    <p>Developed with Spring Boot, React.js, and MongoDB, this platform facilitates real-time chat, notifications, and complaint management for customer support teams.</p>
-                </li>
-            </ul>
+<ul>
+    <li>
+        <h3>Interactive V-Log Post Platform</h3>
+        <p>Built using Node.js and React, this platform allows users to create and browse engaging V-Logs, incorporating
+            features like authentication, notifications, and media management.</p>
+    </li>
+    <li>
+        <h3>Todo Application</h3>
+        <p>A task management tool developed with React.js and Firebase for real-time data synchronization. The app
+            includes user authentication, task tracking, and progress visualization.</p>
+    </li>
+    <li>
+        <h3>Complaint Management System</h3>
+        <p>Developed with Spring Boot, React.js, and MongoDB, this platform facilitates real-time chat, notifications, and
+            complaint management for customer support teams.</p>
+        </li>
+    <li>
+        <h3>Diamond Price Prediction</h3>
+        <p>Developed using Python, this project predicts diamond prices based on various factors such as carat, color,
+            clarity, and cut. The model uses machine learning algorithms like Linear Regression to provide accurate pricing
+            predictions for diamonds.</p>
+    </li>
+</ul>
+
         </div>
 
         <div class="hobbies">
@@ -104,19 +119,12 @@
 
         <div class="contact">
             <h2>Contact</h2>
-            <p><strong>Email:</strong> srishtikumari@example.com</p>
-            <p><strong>Phone:</strong> +91 9876543210</p>
-            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/srishtikumari" target="_blank">LinkedIn Profile</a></p>
+            <p><strong>Email:</strong>spiffy2601@gmail.com</p>
+            <p><strong>Phone:</strong> +91 9341536575</p>
+            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/srishti26/" target="_blank">LinkedIn Profile</a></p>
         </div>
 
-        <div class="testimonials">
-            <h2>Testimonials</h2>
-            <div class="testimonial">
-                <p><strong>John Doe, CEO at TechCorp</strong><br> "Srishti is an exceptional developer with a sharp mind and a strong work ethic. Her ability to tackle complex problems and build solutions from scratch is impressive." </p>
-            </div>
-            <div class="testimonial">
-                <p><strong>Jane Smith, Senior Developer at CodeWorks</strong><br> "I had the pleasure of working with Srishti on a project, and she demonstrated excellent teamwork and technical skills. She is always eager to learn and improve." </p>
-            </div>
+        
         </div>
     </div>
 </body>
