--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,18 +10,44 @@
 
 <body>
     <div class="app">
-        <div class="header">
+        <header class="header">
             <h1>Srishti Kumari</h1>
-        </div>
+            <p>Full Stack Web Developer | AI Enthusiast</p>
+            </header>
+
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="project.html">Project</a></li>
+            <li><a href="project.html">Projects</a></li>
             <li><a href="about.html">About Me</a></li>
         </ul>
-        <div class="intro">
-            I am learning frontend/UI development. I am a B-Tech student at Birla intitute of Technology, Mesra.I
-            want to be a full-stack web developer.
-        </div>
+<main class="intro">
+    <p>Hello! I'm Srishti Kumari, a B-Tech student specializing in Computer Science at Birla Institute of Technology,
+        Mesra. I am passionate about technology and aspire to become a Full Stack Web Developer. Currently, I am
+        focusing on
+        learning frontend/UI development, with a keen interest in frameworks like React, and honing my skills in backend
+        technologies like Node.js, Express.js, and databases like MongoDB.</p>
+
+    <p>I enjoy building web applications that are intuitive and user-friendly, and I believe in delivering high-quality
+        solutions that improve the user experience. Besides coding, I have a strong interest in Artificial Intelligence
+        and
+        Machine Learning and hope to incorporate these technologies into web development in the future.</p>
+
+    <p>As I continue to learn and grow, I aim to work on challenging projects that enhance my skills, and collaborate
+        with a
+        team of like-minded individuals who share my passion for technology.</p>
+
+    <p>In addition to my academic journey, I am also involved in various personal projects and internships, which have
+        given me practical exposure to real-world development practices. These experiences have not only improved my
+        technical
+        knowledge but also taught me valuable lessons in communication, teamwork, and problem-solving.</p>
+</main>
+
+<footer>
+    <ul class="social-media">
+        <li><a href="https://linkedin.com/in/srishti26">LinkedIn</a></li>
+        <li><a href="https://github.com/spiffy1234">GitHub</a></li>
+    </ul>
+</footer>
     </div>
 </body>
 
