--- a/portfolio/project.html
+++ b/portfolio/project.html
@@ -10,24 +10,54 @@
 
 <body>
     <div class="app">
-        <div class="header">
-            <h1> Projects</h1>
-        </div>
-        <ul class="nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="project.html">Project</a></li>
-            <li><a href="about.html">About Me</a></li>
-        </ul>
+        <header class="header">
+            <h1>Projects</h1>
+        </header>
+        
+        <nav>
+            <ul class="nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="project.html">Projects</a></li>
+                <li><a href="about.html">About Me</a></li>
+                </ul>
+        </nav>
 
-        <h2 class="projectheader">My projects with soure code and output</h2>
-        <ul class="project">
-            <li><a href="https://github.com/spiffy1234/Netflix-clone">Netflix clone (source code)</a>
-                [ <a href="https://spiffy1234.github.io/netflix.html">view output</a> ]
-            </li>
-            <li><a href="https://github.com/spiffy1234/TemperatureConverter/tree/main">Temperature convertor (source
-                    code)</a> [ <a href="https://spiffy1234.github.io/Temperature-converter.html">view output</a> ]</li>
-            <li><a href="#"> Portfolio (source code)</a> [ <a href="#">view output</a> ]</li>
-        </ul>
+        <section class="projects">
+            <h2 class="projectheader">My Projects</h2>
+            <ul class="project">
+                <li>
+                    <a href="https://github.com/spiffy1234/Netflix-clone" target="_blank" rel="noopener noreferrer">Netflix Clone (View
+                        on GitHub)</a>
+                    [ <a href="https://spiffy1234.github.io/netflix.html" target="_blank" rel="noopener noreferrer">View Project</a> ]
+                </li>
+                <li>
+                    <a href="https://github.com/spiffy1234/TemperatureConverter/tree/main" target="_blank"
+                        rel="noopener noreferrer">Temperature Converter (View on GitHub)</a>
+                    [ <a href="https://spiffy1234.github.io/Temperature-converter.html" target="_blank" rel="noopener noreferrer">View
+                        Project</a> ]
+                </li>
+                <li>
+                    <a href="https://github.com/spiffy1234/spiffy1234.github.io/tree/main/portfolio" target="_blank"
+                        rel="noopener noreferrer">Portfolio (View on GitHub)</a>
+                    [ <a href="#" target="_blank" rel="noopener noreferrer">View Project</a> ]
+                </li>
+                <li>
+                    <a href="https://github.com/spiffy1234/nextauth" target="_blank" rel="noopener noreferrer">V-Log Platform
+                        (View on GitHub)</a>
+                    [ <a href="https://nextauth-spiffy.vercel.app/" target="_blank" rel="noopener noreferrer">View Project</a> ]
+                </li>
+                <li>
+                    <a href="https://github.com/spiffy1234/Todo" target="_blank" rel="noopener noreferrer">Todo Application (View on
+                        GitHub)</a>
+                    [ <a href="https://github.com/spiffy1234/Todo" target="_blank" rel="noopener noreferrer">View Project</a> ]
+                </li>
+                <li>
+                    <a href="#" target="_blank" rel="noopener noreferrer">Diamond
+                        Price Prediction Model (View on GitHub)</a>
+                    [ <a href="#" target="_blank" rel="noopener noreferrer">View Project</a> ]
+                </li>
+            </ul>
+        </section>
     </div>
 </body>
 
