CSS file created successfully

--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Project list </title>
+    <title>Project List</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <ul>
-    <li> <a href="netflix.html">Netflix clone</a> </li>
-    <li> <a href="Temperature-converter.html"> Temperature-convertor</a> </li>
-    <li> <a href="portfolio/index.html"> Portfolio</a ></li>
+    <div class="container">
+      <h1>Project List</h1>
+      <div class="project-box">
+        <a href="netflix.html">Netflix Clone</a>
+      </div>
+      <div class="project-box">
+        <a href="Temperature-converter.html">Temperature Converter</a>
+      </div>
+      <div class="project-box">
+        <a href="portfolio/index.html">Portfolio</a>
+      </div>
+    </div>
 </body>
+
+</html>
