--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project List</title>
+    <title>My Projects</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <div class="container">
-      <h1>Project List</h1>
-      <div class="project-box">
-        <a href="netflix.html">Netflix Clone</a>
-      </div>
-      <div class="project-box">
-        <a href="Temperature-converter.html">Temperature Converter</a>
-      </div>
-      <div class="project-box">
-        <a href="portfolio/index.html">Portfolio</a>
-      </div>
+        <header>
+          <h1>Hi, I'm Srishti Kumari</h1>
+          <p>Explore my projects below:</p>
+        </header>
+        <div class="project-list">
+          <div class="project-box">
+            <a href="netflix.html">Netflix Clone</a>
+          </div>
+          <div class="project-box">
+            <a href="Temperature-converter.html">Temperature Converter</a>
+          </div>
+          <div class="project-box">
+            <a href="portfolio/index.html">Portfolio</a>
+          </div>
+        </div>
     </div>
 </body>
-
 </html>
