--- a/portfolio/project.html
+++ b/portfolio/project.html
@@ -49,7 +49,7 @@
                 <li>
                     <a href="https://github.com/spiffy1234/Todo" target="_blank" rel="noopener noreferrer">Todo Application (View on
                         GitHub)</a>
-                    [ <a href="https://github.com/spiffy1234/Todo" target="_blank" rel="noopener noreferrer">View Project</a> ]
+                    [ <a href="https://todo-two-peach-61.vercel.app/" target="_blank" rel="noopener noreferrer">View Project</a> ]
                 </li>
                 <li>
                     <a href="#" target="_blank" rel="noopener noreferrer">Diamond
