--- a/portfolio/project.html
+++ b/portfolio/project.html
@@ -28,18 +28,21 @@
                 <li>
                     <a href="https://github.com/spiffy1234/Netflix-clone" target="_blank" rel="noopener noreferrer">Netflix Clone (View
                         on GitHub)</a>
-                    [ <a href="https://spiffy1234.github.io/netflix.html" target="_blank" rel="noopener noreferrer">View Project</a> ]
+                    [ <a href="https://portfolio-git-main-srishti-s-projects-9857b9ea.vercel.app/netflix.html" target="_blank"
+                        rel="noopener noreferrer">View Project</a> ]
                 </li>
                 <li>
                     <a href="https://github.com/spiffy1234/TemperatureConverter/tree/main" target="_blank"
                         rel="noopener noreferrer">Temperature Converter (View on GitHub)</a>
-                    [ <a href="https://spiffy1234.github.io/Temperature-converter.html" target="_blank" rel="noopener noreferrer">View
+                    [ <a href="https://portfolio-git-main-srishti-s-projects-9857b9ea.vercel.app/Temperature-converter.html" target="_blank"
+                        rel="noopener noreferrer">View
                         Project</a> ]
                 </li>
                 <li>
                     <a href="https://github.com/spiffy1234/spiffy1234.github.io/tree/main/portfolio" target="_blank"
                         rel="noopener noreferrer">Portfolio (View on GitHub)</a>
-                    [ <a href="#" target="_blank" rel="noopener noreferrer">View Project</a> ]
+                    [ <a href="https://portfolio-git-main-srishti-s-projects-9857b9ea.vercel.app/portfolio/index.html" target="_blank"
+                        rel="noopener noreferrer">View Project</a> ]
                 </li>
                 <li>
                     <a href="https://github.com/spiffy1234/nextauth" target="_blank" rel="noopener noreferrer">V-Log Platform
