--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -39,9 +39,9 @@
 
             <div class="education">
                 <h2>Education</h2>
-                <p><strong>BIT Mesra, Patna</strong><br> B.Tech in Computer Science, 2024</p>
+                <p><strong>BIT Mesra, </strong><br>CGPA- 8.02 </strong><br> B.Tech in Computer Science, 2024</p>
                 <p><strong>S.G.D.Patliputra High School, Patna Percentage- 70%</strong><br> Class 12th - 2021</p>
-                <p><strong>M V K B High School, Patna Percentage- 75%</strong><br> Class 10th - 2021</p>
+                <p><strong>M V K B High School, Patna Percentage- 75%</strong><br> Class 10th - 2019</p>
             </div>
         </div>
 
@@ -113,7 +113,7 @@
             <h2>Hobbies</h2>
             <p>Basketball</p>
             <p>Gardening</p>
-            <p>Traveling</p>
+            <p>Travelling</p>
             <p>Listening to Music</p>
         </div>
 
