All update done

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -39,15 +39,15 @@
 
             <div class="education">
                 <h2>Education</h2>
-                <p><strong>BIT Mesra, </strong><br>CGPA- 8.02 </strong><br> B.Tech in Computer Science, 2024</p>
+                <p><strong>BIT Mesra, </strong><br>CGPA- 8.02 </strong><br> B.Tech in Computer Science, 2025</p>
                 <p><strong>S.G.D.Patliputra High School, Patna Percentage- 70%</strong><br> Class 12th - 2021</p>
                 <p><strong>M V K B High School, Patna Percentage- 75%</strong><br> Class 10th - 2019</p>
             </div>
         </div>
 
         <div class="skills">
-            <h2>Skills</h2>
-            <div class="skill-category">
+            <h2><b> Technical Skills </b></h2>
+                       <div class="skill-category">
                 <h3>Web Development</h3>
                 <ul>
                     <li>Full Stack Development (React, Node.js, Next.js MongoDB)</li>
@@ -80,35 +80,6 @@
                 </ul>
             </div>
         </div>
-
-        <div class="projects">
-            <h2>Projects</h2>
-<ul>
-    <li>
-        <h3>Interactive V-Log Post Platform</h3>
-        <p>Built using Node.js and React, this platform allows users to create and browse engaging V-Logs, incorporating
-            features like authentication, notifications, and media management.</p>
-    </li>
-    <li>
-        <h3>Todo Application</h3>
-        <p>A task management tool developed with React.js and Firebase for real-time data synchronization. The app
-            includes user authentication, task tracking, and progress visualization.</p>
-    </li>
-    <li>
-        <h3>Complaint Management System</h3>
-        <p>Developed with Spring Boot, React.js, and MongoDB, this platform facilitates real-time chat, notifications, and
-            complaint management for customer support teams.</p>
-        </li>
-    <li>
-        <h3>Diamond Price Prediction</h3>
-        <p>Developed using Python, this project predicts diamond prices based on various factors such as carat, color,
-            clarity, and cut. The model uses machine learning algorithms like Linear Regression to provide accurate pricing
-            predictions for diamonds.</p>
-    </li>
-</ul>
-
-        </div>
-
         <div class="hobbies">
             <h2>Hobbies</h2>
             <p>Basketball</p>
@@ -122,6 +93,7 @@
             <p><strong>Email:</strong>spiffy2601@gmail.com</p>
             <p><strong>Phone:</strong> +91 9341536575</p>
             <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/srishti26/" target="_blank">LinkedIn Profile</a></p>
+            <p><strong>GitHub:</strong> <a href="https://github.com/spiffy1234" target="_blank">GitHub Profile</a></p>
         </div>
 
         
