--- a/portfolio/project.html
+++ b/portfolio/project.html
@@ -60,6 +60,33 @@
                     [ <a href="#" target="_blank" rel="noopener noreferrer">View Project</a> ]
                 </li>
             </ul>
+            <div class="project">
+                <h2>Description</h2>
+    <ul>
+        <li>
+            <h3>Interactive V-Log Post Platform</h3>
+            <p>Built using Node.js and React, this platform allows users to create and browse engaging V-Logs, incorporating
+                features like authentication, notifications, and media management.</p>
+        </li>
+        <li>
+            <h3>Todo Application</h3>
+            <p>A task management tool developed with React.js and Firebase for real-time data synchronization. The app
+                includes user authentication, task tracking, and progress visualization.</p>
+        </li>
+        <li>
+            <h3>Complaint Management System</h3>
+            <p>Developed with Spring Boot, React.js, and MongoDB, this platform facilitates real-time chat, notifications, and
+                complaint management for customer support teams.</p>
+            </li>
+        <li>
+            <h3>Diamond Price Prediction</h3>
+            <p>Developed using Python, this project predicts diamond prices based on various factors such as carat, color,
+                clarity, and cut. The model uses machine learning algorithms like Linear Regression to provide accurate pricing
+                predictions for diamonds.</p>
+        </li>
+    </ul>
+    
+            </div>
         </section>
     </div>
 </body>
